Manifest.azure.yaml
---
# Source: Experimental/charts/k8s-service/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: experimental-k8s-service
  labels:
    helm.sh/chart: k8s-service-0.1.0
    app.kubernetes.io/name: k8s-service
    app.kubernetes.io/instance: experimental
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: k8s-service
    app.kubernetes.io/instance: experimental
---
# Source: Experimental/charts/k8s-service/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: experimental-k8s-service
  labels:
    helm.sh/chart: k8s-service-0.1.0
    app.kubernetes.io/name: k8s-service
    app.kubernetes.io/instance: experimental
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: k8s-service
      app.kubernetes.io/instance: experimental
  template:
    metadata:
      labels:
        app.kubernetes.io/name: k8s-service
        app.kubernetes.io/instance: experimental
    spec:
      serviceAccountName: default
      securityContext:
        {}
      containers:
        - name: k8s-service
          securityContext:
            {}
          image: "thorstenbaek/k8s-service:v1.0.0.1"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: http
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: http
          resources:
            {}
---
# Source: Experimental/charts/k8s-service/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: experimental-k8s-service  
  labels:
    helm.sh/chart: k8s-service-0.1.0
    app.kubernetes.io/name: k8s-service
    app.kubernetes.io/instance: experimental
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - "k8s-service.api.dips.no"
      secretName: k8s-service-experimental-tls
  rules:
    - host: "k8s-service.api.dips.no"
      http:
        paths:
          - path: /
            backend:
              serviceName: experimental-k8s-service
              servicePort: 80
---
# Source: Experimental/charts/k8s-service/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "experimental-k8s-service-test-connection"
  labels:
    helm.sh/chart: k8s-service-0.1.0
    app.kubernetes.io/name: k8s-service
    app.kubernetes.io/instance: experimental
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['experimental-k8s-service:80']
  restartPolicy: Never
